--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tcs_protowhat~=2.1.3
+tcs_protowhat==2.1.4
 asttokens~=2.0.5
 dill~=0.3.4
 markdown2~=2.3.10
-jinja2~=2.11.3
+jinja2==3.0.3
 numpy~=1.19.5
 pandas~=1.3.2
 scipy~=1.7.1
